<resources>
    <string name="app_name">EventRadar</string>
    <string name="title_discover">Entdecken</string>
    <string name="title_map">Karte</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_event">Event</string>
    <string name="title_ticket">Ticket</string>
    <string name="title_booking">Buchen</string>
    <string name="title_interests">Interessen</string>
    <string name="title_register">Registrieren</string>
    <string name="title_login">Anmelden</string>
    <string name="title_account">Konto</string>

    <string name="name">Vorname</string>
    <string name="surname">Nachname</string>
    <string name="birthdate">Geburtsdatum</string>
    <string name="mail">E-Mail</string>
    <string name="phone">Handynummer</string>
    <string name="password">Passwort</string>
    <string name="select_birthdate">Geburtsdatum auswählen</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="email_error">Ungültige E-Mail</string>
    <string name="forename_error">Vorname ist erforderlich</string>
    <string name="surname_error">Nachname ist erforderlich</string>
    <string name="birthdate_error">Geburtsdatum ist erforderlich</string>
    <string name="phone_error">Ungültige Handynummer</string>
    <string name="password_empty_error">Passwort ist erforderlich</string>
    <string name ="passwords_do_not_match">Passwörter stimmen nicht überein</string>

    <string name="title">Titel</string>
    <string name="date">Datum</string>
    <string name="price">Preis</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>

    <string name="booking_title">Titel das Events</string>
    <string name="booking_price">Preis inkl. MwSt.</string>
    <string name="booking_payment">Zahlungsmethode</string>
    <string name="booking_payment_google">Google Pay</string>
    <string name="booking_info">Eine ausführliche Rechnung und das Ticket bekommst du im Anschluss per Mail zugesandt. Das Ticket ist auch jeder Zeit in der App abrufbar.</string>
    <string name="booking_fab">Kostenpflichtig bestellen</string>

    <string name="description">Beschreibung</string>
    <string name="organizer">Veranstalter</string>
    <string name="when">Wann?</string>
    <string name="where">Wo?</string>
    <string name="what">Was?</string>
    <string name="ticket_info">Zeige diesen Code beim Einlass vor</string>
    <string name="ticket_cancel">Stornierung anfordern</string>

    <string name="search_hint_discover">Entdecke deine Stadt</string>
    <string name="search_hint_map">Finde Events in der Nähe</string>
    <string name="search_hint_tickets">Durchsuche deine Tickets</string>

    <string name="logout">Account verwalten</string>
    <string name="logout_btn">Abmelden</string>
    <string name="logout_summary">Möchten Sie sich abmelden oder Ihre gespeicherten Daten herunterladen?</string>

    <string name="scope">Außerhalb des Umfangs</string>
    <string name="scope_summary">Die Funktion, welche Sie versuchen aufzurufen, liegt nicht im Implementierungsumfang.</string>

    <string name="share">Teilen</string>
    <string name="google_login">Mit Google fortfahren</string>
    <string name="facebook_login">Mit Facebook fortfahren</string>
    <string name="guest_login">Als Gast fortfahren</string>
    <string name="register">Kein Account? Jetzt registrieren</string>
    <string name="reset_password">Passwort vergessen?</string>
    <string name="email_mobile_number">E-Mail / Handynummer</string>
    <string name="loading">Lädt</string>
    <string name="error_occurred">Ein Fehler ist aufgetreten</string>
    <string name="empty_list">Keine Ergebnisse gefunden</string>
    <string name="dummy_database">Dummy-Einträge</string>
    <string name="dummy_database_summary">Die Dummy-Datenbank wurde erfolgreich erstellt. Um auf die befüllte Datenbank zuzugreifen, ist es erforderlich, die Aktivität neu zu starten.</string>
    <string name="login_error">Ungültige Email/Handynummer oder Passwort</string>
    <string name="booking_login_required">Sie müssen angemeldet sein, um ein Ticket buchen zu können.</string>
    <string name="calendar_error">"Es ist keine Kalender-App installiert."</string>

    <string name="currency_format">%1$s €</string>
    <string name="vat_format">%1$s inkl. MwSt.</string>
    <string name="summary_format">%1$s • %2$s</string>
    <string name="start_format">%1$s um %2$s Uhr</string>
    <string name="address_format">%1$s %2$s, %3$s %4$s</string>
</resources>

