<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_8"
        android:clipToPadding="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:paddingVertical="@dimen/half_padding"
        android:paddingHorizontal="@dimen/full_padding">

        <com.google.android.material.chip.Chip
            android:id="@+id/date_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_padding"
            app:chipIconTint="?colorOnSurface"
            android:text="@string/date"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/title_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_padding"
            app:chipIconTint="?colorOnSurface"
            android:text="@string/title"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/price_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_padding"
            app:chipIconTint="?colorOnSurface"
            android:text="@string/price"/>
    </LinearLayout>

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/full_padding"
        android:layout_marginHorizontal="@dimen/full_padding"
        app:defaultMarginsEnabled="false"
        app:menu="@menu/search_bar_menu"
        android:hint="@string/search_hint_tickets" />
</RelativeLayout>