<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/map_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="Overdraw">

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/full_padding"
        android:layout_marginHorizontal="@dimen/full_padding"
        app:defaultMarginsEnabled="false"
        app:menu="@menu/search_bar_menu"
        android:hint="@string/search_hint_map" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_map_location"
        android:contentDescription="@string/title_map" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/location"
        android:padding="@dimen/full_padding"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textAlignment="center"
        android:text="@string/scope_summary" />
</RelativeLayout>