<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="discover"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/title_discover"
        android:shortcutLongLabel="@string/title_discover"
        android:shortcutDisabledMessage="@string/title_discover">
        <intent
            android:action="com.example.eventradar.SHOW_DISCOVER"
            android:targetPackage="com.example.eventradar"
            android:targetClass="com.example.eventradar.activities.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="map"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/title_map"
        android:shortcutLongLabel="@string/title_map"
        android:shortcutDisabledMessage="@string/title_map">
        <intent
            android:action="com.example.eventradar.SHOW_MAP"
            android:targetPackage="com.example.eventradar"
            android:targetClass="com.example.eventradar.activities.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="tickets"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/title_tickets"
        android:shortcutLongLabel="@string/title_tickets"
        android:shortcutDisabledMessage="@string/title_tickets">
        <intent
            android:action="com.example.eventradar.SHOW_TICKETS"
            android:targetPackage="com.example.eventradar"
            android:targetClass="com.example.eventradar.activities.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>